# lyrics-service

./: .clang-format  AbstractInterface.h  CMakeLists.txt  DBusService.cpp  DBusService.h  DBusServiceServer.cpp  DBusServiceServer.h  DBuseServiceAdaptor.cpp  DBuseServiceAdaptor.h  LyricsServiceServer.xml  MainApplication.cpp  MainApplication.h  main.cpp  org.lyrics.service.xml
.cache/clangd/index/: DBusServiceServer.cpp.6EE511AB033CBD55.idx  DBusServiceServer.h.4E399DDC58A72DE3.idx  DBuseServiceAdaptor.cpp.49DADC56860410E7.idx  DBuseServiceAdaptor.h.02F0128799CB8245.idx  YesplaymusicInterface.cpp.F61DE35426BE41B7.idx  YesplaymusicInterface.h.BFACED2B940ADC9E.idx  main.cpp.56600B2D4B1A7B95.idx
.kdev4/: lyrics-service.kdev4
.qt/: QtDeploySupport.cmake
